<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/navy"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:context=".ui.home.HomeFragment">

        <TextView
            android:id="@+id/tv_greeting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/hi_user"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/profile_image_home"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image_home"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_greeting"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_greeting"
            app:layout_constraintTop_toTopOf="@+id/tv_greeting"
            tools:src="@tools:sample/backgrounds/scenic" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmerFrameLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="@+id/profile_image_home"
            app:layout_constraintStart_toStartOf="@+id/tv_greeting"
            app:layout_constraintTop_toBottomOf="@+id/profile_image_home">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_popular_movies_shimmer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/popular_movies"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <include layout="@layout/item_home_shimmer" />

                    <include layout="@layout/item_home_shimmer" />

                    <include layout="@layout/item_home_shimmer" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_popular_tv_shimmer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/popular_tv_show"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <include layout="@layout/item_home_shimmer" />

                    <include layout="@layout/item_home_shimmer" />

                    <include layout="@layout/item_home_shimmer" />
                </LinearLayout>
            </LinearLayout>

        </com.facebook.shimmer.ShimmerFrameLayout>

        <LinearLayout
            android:id="@+id/contentHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/profile_image_home"
            app:layout_constraintStart_toStartOf="@+id/tv_greeting"
            app:layout_constraintTop_toBottomOf="@+id/profile_image_home">

            <TextView
                android:id="@+id/tv_popular_movies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/popular_movies"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_popular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:listitem="@layout/item_movies" />

            <TextView
                android:id="@+id/tv_popular_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/popular_tv_show"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_popular_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:listitem="@layout/item_tvshow" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>





