...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/navy"
    tools:context=".ui.detail.tvshow.DetailTVShowFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite_tvshow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
...
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_detail_show"
            app:layout_constraintTop_toTopOf="@+id/img_detail_show" />

        <TextView
            android:id="@+id/tv_title_show"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/tv_show_title"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/tv_label_title_show"
...
