...
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_detail_movies"
            app:layout_constraintTop_toTopOf="@+id/img_detail_movies" />

        <TextView
            android:id="@+id/tv_title_movies"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/movies_title"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/tv_label_title_movies"
...
